--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary: #fffef2;
+  --darkBanner: #333333;
+}
+
 body {
-    background-color: #FFFEF2;
+  background-color: var(--primary);
+  font-family: Suisse Regular, sans-serif;
+}
+
+.bg-blur {
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2147483645;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-primary {
+  background-color: var(--darkBanner);
+  color: var(--primary);
+}
+
+.btn-secondary {
+  background-color: transparent;
+  border: 1px solid var(--darkBanner);
+  color: var(--darkBanner);
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-primary:hover {
+  background-color: var(--darkBanner);
+  color: var(--primary);
+  border: 1px solid transparent;
 }
